# ekf_cal

./: .clang-format  .doxyfile  .gitignore  .gitmodules  .lcovrc  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO  package.xml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: all-tests.yaml  documentation.yaml
config/: charuco.yaml  example.yaml  fiducial.yaml  gps.yaml  gravity.yaml  imu-cam.yaml  msckf.yaml  multi-imu.yaml  spline.yaml  test.yaml  three-imu.yaml  vn300.yaml
config/regression/: fiducial.yaml  gps.yaml  one_imu.yaml  one_imu_cam.yaml  one_imu_cam_rotation.yaml  one_imu_cam_translation.yaml  one_imu_rotation.yaml  one_imu_stationary.yaml  one_imu_translation.yaml  pred_imu.yaml  pred_imu_cam.yaml  pred_imu_cam_rotation.yaml  pred_imu_cam_translation.yaml  pred_imu_rotation.yaml  pred_imu_translation.yaml  smoother.yaml  spline.yaml  two_imu.yaml  two_imu_rotation.yaml  two_imu_translation.yaml
docs/: Index.md  architecture.md  design.puml  filter.md  filters.md  header.html  index.html  index.md  macro.tex  main.md  models.md  parameters.md  software.md  tutorial.md
docs/filter/: fiducial.md  multi-cam.md  multi-imu.md
docs/filters/: camera.md  fiducial.md  gps.md  imu.md
docs/flamegraph/: .gitignore  perf.yaml  run_perf.sh
docs/models/: camera.md  clock.md  gps.md  imu.md
docs/paper/: .gitignore  paper.bib  paper.md
docs/software/: coverage.md  flamegraph.md  todo.md
eval/: animate.py  evaluate.py  generate-board.py  input_parser.py  plot-bokeh.py  plot.py  plotSim.py  plot_sim.py  report.py  run.py  runSim.py  run_and_plot.py  run_sim.py  stats.py  tab_body.py  tab_fiducial.py  tab_gps.py  tab_imu.py  tab_msckf.py  theme-dark.yaml  theme-light.yaml  utilities.py
include/: Constants.hpp  EkfCalNode.hpp  EkfHealthNode.hpp  EkfVizNode.hpp  MathHelper.hpp  RosHelper.hpp  TypeHelper.hpp  VizNode.hpp
include/ekf/: EKF.hpp
include/ekf/sensors/: Camera.hpp  Imu.hpp  Lidar.hpp  Sensor.hpp
launch/: example.launch.py  imu-cam.launch.py  multi-imu-launch.py  three-imu-launch.py
src/: EkfCalNode.cpp  EkfHealthNode.cpp  EkfVizNode.cpp
src/application/ros/: EkfCalMain.cpp  EkfCalNode.cpp  EkfCalNode.hpp  StatePublisherMain.cpp  StatePublisherNode.cpp  StatePublisherNode.hpp  ekf_cal_main.cpp  state_publisher_main.cpp
src/application/sim/: LowFidelitySim.cpp  Simulation.cpp  simulation.cpp
src/ekf/: CMakeLists.txt  Constants.hpp  EKF.cpp  EKF.hpp  MSCKF.cpp  MSCKF.hpp  Types.cpp  Types.hpp  constants.hpp  ekf.cpp  ekf.hpp  imu_filter.cpp  imu_filter.hpp  types.cpp  types.hpp
src/ekf/base/: EKF.cpp  EKF.hpp
src/ekf/sensors/: Camera.cpp  Camera.hpp  IMU.hpp  Imu.cpp  Imu.hpp  Lidar.cpp  Lidar.hpp  Sensor.cpp  Sensor.hpp
src/ekf/test/: ekf_test.cpp  test_EKF.cpp  types_test.cpp
src/ekf/update/: Camera.hpp  IMU.hpp  ImuUpdater.cpp  ImuUpdater.hpp  LIDAR.hpp  MsckfUpdater.cpp  MsckfUpdater.hpp  Sensor.hpp  Updater.cpp  Updater.hpp  fiducial_updater.cpp  fiducial_updater.hpp  gps_updater.cpp  gps_updater.hpp  imu_updater.cpp  imu_updater.hpp  msckf_updater.cpp  msckf_updater.hpp  updater.cpp  updater.hpp
src/infrastructure/: DataLogger.cpp  DataLogger.hpp  DebugLogger.cpp  DebugLogger.hpp  Logger.cpp  Logger.hpp  data_logger.cpp  data_logger.hpp  debug_logger.cpp  debug_logger.hpp  ekf_cal_version.hpp.in
src/infrastructure/ros/: RosDebugLogger.cpp  RosLog.cpp  ros_debug_logger.cpp
src/infrastructure/sim/: SimDebugLogger.cpp  SimLog.cpp  TruthEngine.cpp  TruthEngine.hpp  TruthEngineCyclic.cpp  TruthEngineCyclic.hpp  TruthEngineSpline.cpp  TruthEngineSpline.hpp  sim_debug_logger.cpp  truth_engine.cpp  truth_engine.hpp  truth_engine_cyclic.cpp  truth_engine_cyclic.hpp  truth_engine_smoother.cpp  truth_engine_smoother.hpp  truth_engine_spline.cpp  truth_engine_spline.hpp
src/infrastructure/test/: data_logger_test.cpp  debug_logger_test.cpp
src/node/: EkfCalNode.cpp  EkfCalNode.hpp  EkfHealthNode.cpp  EkfHealthNode.hpp  VizNode.cpp  VizNode.hpp
src/sensors/: Camera.cpp  Camera.hpp  IMU.cpp  IMU.hpp  Sensor.cpp  Sensor.hpp  Tracker.cpp  Tracker.hpp  camera.cpp  camera.hpp  camera_message.cpp  camera_message.hpp  gps.cpp  gps.hpp  gps_message.hpp  imu.cpp  imu.hpp  imu_message.hpp  sensor.cpp  sensor.hpp  sensor_message.hpp  types.hpp
src/sensors/ros/: Camera.cpp  Camera.hpp  Imu.cpp  Imu.hpp  RosCam.cpp  RosCam.hpp  RosCamera.cpp  RosCamera.hpp  RosIMU.cpp  RosIMU.hpp  RosImu.cpp  RosImu.hpp  Sensor.cpp  Sensor.hpp  ros_camera.cpp  ros_camera.hpp  ros_camera_message.cpp  ros_camera_message.hpp  ros_gps.cpp  ros_gps.hpp  ros_gps_message.cpp  ros_gps_message.hpp  ros_imu.cpp  ros_imu.hpp  ros_imu_message.cpp  ros_imu_message.hpp
src/sensors/sim/: SimCamera.cpp  SimCamera.hpp  SimIMU.cpp  SimIMU.hpp  SimTracker.cpp  SimTracker.hpp  SimTypes.hpp  sim_camera.cpp  sim_camera.hpp  sim_camera_message.hpp  sim_gps.cpp  sim_gps.hpp  sim_gps_message.hpp  sim_imu.cpp  sim_imu.hpp  sim_imu_message.hpp  sim_sensor.cpp  sim_sensor.hpp
src/sensors/test/: camera_test.cpp  gps_test.cpp  imu_test.cpp  sensor_test.cpp  test_Camera.cpp  test_IMU.cpp
src/trackers/: FeatureTracker.cpp  FeatureTracker.hpp  feature_tracker.cpp  feature_tracker.hpp  fiducial_tracker.cpp  fiducial_tracker.hpp  tracker.cpp  tracker.hpp
src/trackers/sim/: SimFeatureTracker.cpp  SimFeatureTracker.hpp  sim_feature_tracker.cpp  sim_feature_tracker.hpp  (+4 more)
src/utilities/: Constants.hpp  MathHelper.hpp  RosHelper.hpp  TypeHelper.hpp
src/utility/: Constants.hpp  MathHelper.hpp  RosHelper.hpp  TypeHelper.hpp  constants.hpp  custom_assertions.hpp  gps_helper.cpp  gps_helper.hpp  math_helper.cpp  math_helper.hpp  ros_helper.cpp  ros_helper.hpp  string_helper.cpp  string_helper.hpp  type_helper.cpp  type_helper.hpp
test/: CMakeLists.txt  CustomAssertions.hpp  MathHelper_test.cpp  test_EkfCalNode.cpp  test_EkfHealthNode.cpp  test_MathHelper.cpp  test_RosHelper.cpp  test_TypeHelper.cpp  test_VizNode.cpp
test/ekf/: test_EKF.cpp
test/ekf/sensors/: test_Camera.cpp  test_Imu.cpp  test_Lidar.cpp  test_Sensor.cpp
(+68 files in other folders)
