<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ekf_cal</name>
  <version>0.0.0</version>
  <description>Kalman Filter-Base Sensor Calibration</description>
  <maintainer email="JacobHartzer@gmail.com">jacob</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
